# sharp-frame-extractor

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  SharpFrameExtractor.py  demo.py  extractor.py  pyproject.toml  requirements.txt  setup.py  sharp-frame-extractor.py  sharp_frame_extractor.py
.github/workflows/: code-format-lint-check.yml  publish.yml
SFE/: SharpFrameExtractor.py  __init__.py
SFE/estimator/: CannyEstimator.py  SobelEstimator.py
SharpFrameExtractor/: SFEWorker.py  SharpFrameExtractor.py  __init__.py
SharpFrameExtractor/estimator/: CannyEstimator.py  SobelEstimator.py
SharpFrameExtractor/utils/: ExponentialMovingAverage.py
estimator/: BaseEstimator.py  CannyEstimator.py  SobelEstimator.py  __init__.py
scripts/: performance_measurement.py  read_speed_demo.py
scripts/reader/: ffmpegio_video_reader.py
sharp_file_extractor/: __main__.py
sharp_file_extractor/analyzer/: frame_analyzer_base.py  frame_analyzer_pool.py  tenegrad_frame_analyzer.py
sharp_file_extractor/worker/: BaseWorker.py  BaseWorkerPool.py  Future.py  types.py
sharp_frame_extractor/: SFEWorker.py  SharpFrameExtractor.py  __init__.py  __main__.py  args_utils.py  event.py  models.py  video_reader.py
sharp_frame_extractor/analyzer/: frame_analyzer_base.py  frame_analyzer_pool.py  tenegrad_frame_analyzer.py
sharp_frame_extractor/estimator/: CannyEstimator.py  SobelEstimator.py
sharp_frame_extractor/memory/: rolling_buffer.py  shared_ndarray.py  shared_ndarray_pool.py
sharp_frame_extractor/output/: file_output_handler.py  frame_output_handler_base.py
sharp_frame_extractor/reader/: av_video_reader.py  batched_video_reader.py  ffmpegio_video_reader.py  opencv_video_reader.py  video_reader.py
sharp_frame_extractor/ui/: progress_bar.py
sharp_frame_extractor/worker/: BaseWorker.py  BaseWorkerPool.py  Future.py  types.py
utils/: ExponentialMovingAverage.py
