[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharp-frame-extractor"
version = "2.0.0-rc.3"
description = "Extracts sharp frames from a video."
readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Florian Bruggisser", email = "github@broox.ch" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.12"
dependencies = [
    "av>=14.0.1",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "psutil>=7.2.1",
    "rich>=14.2.0",
    "rich-argparse>=1.7.2",
]

[project.urls]
Homepage = "https://github.com/cansik/sharp-frame-extractor"
Documentation = "https://github.com/cansik/sharp-frame-extractor/blob/main/README.md"
Repository = "https://github.com/cansik/sharp-frame-extractor.git"

[dependency-groups]
dev = [
    { include-group = "lint" },
]

lint = [
    "ruff>=0.14.8",
]

benchmark = [
    "ffmpegio>=0.11.1"
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
respect-gitignore = true

exclude = []

[tool.ruff.lint]
# select = ["FA100", "UP006"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

docstring-code-format = true

exclude = []

[tool.setuptools]
packages = ["sharp_frame_extractor"]

[project.scripts]
sharp-frame-extractor = "sharp_frame_extractor.__main__:main"
